<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/navigator_1" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/navigator_2" />
        <item
            android:id="@+id/nav_zones"
            android:icon="@drawable/ic_menu_zone"
            android:title="@string/navigator_3" />
        <item
            android:id="@+id/nav_attraction"
            android:icon="@drawable/ic_menu_attraction"
            android:title="@string/navigator_4" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/navigator_5" />
        <item
            android:id="@+id/nav_guidelines"
            android:icon="@drawable/ic_menu_guidelines"
            android:title="@string/navigator_6" />
        <item
            android:id="@+id/nav_accomodation"
            android:icon="@drawable/ic_menu_accommodation"
            android:title="@string/navigator_7" />
        <item
            android:id="@+id/nav_reach"
            android:icon="@drawable/ic_menu_reach"
            android:title="@string/navigator_8" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/navigator_9" />
        <item
            android:id="@+id/nav_sponsor"
            android:icon="@drawable/ic_menu_sponsor"
            android:title="@string/navigator_10" />
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/ic_menu_developers"
            android:title="@string/navigator_11" />


    </group>

</menu>
