<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".main.index"
    tools:showIn="@layout/app_bar_index"
    android:id="@+id/android_coordinator_layout">


    <android.support.design.widget.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:id="@+id/view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout2">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageView2"
                android:src="@drawable/algo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textposttime"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:textSize="30dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/text_timer_title"
                android:text="@string/timer_title"
                android:layout_gravity="center_horizontal"
                android:layout_weight="100"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/LinearLayout10">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        android:id="@+id/txtTimerDays"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/timer_days"
                        android:id="@+id/txtDays"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/LinearLayout11">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        android:id="@+id/txtTimerHours"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/timer_hours"
                        android:id="@+id/txtHours"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/LinearLayout12">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        android:id="@+id/txtTimerMinutes"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/timer_minutes"
                        android:id="@+id/txtMinutes"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:id="@+id/LinearLayout13">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        android:id="@+id/txtTimerSeconds"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/timer_seconds"
                        android:id="@+id/txtSeconds"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view2"
        android:fillViewport="true"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout">


            <GridView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/grid"
                android:columnWidth="120dp"
                android:gravity="center"
                android:listSelector="#000000"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:nestedScrollingEnabled="true" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
